--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "cypress": "cypress open",
     "lint": "eslint src",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -37,7 +38,8 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
+    "@babel/eslint-parser": "^7.17.0",
+    "cypress": "^9.5.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^26.1.1",
